Fixed alignment of image view

--- a/mysite/image_bank/static/image_bank/style.css
+++ b/mysite/image_bank/static/image_bank/style.css
@@ -1,13 +1,10 @@
-li { color: green; }
-
 form { font-size: 4; }
 form label { font-size: 14px; }
 form input { font-size: 12px; }
-
 label { float: left; width: 100px; }
 
 #redBox {
-    background: #f00;
+    background: #d00;
     color: #fff;
     font-family: 'Helvetica', 'Arial', sans-serif;
     font-size: 5em;
@@ -16,4 +13,19 @@ label { float: left; width: 100px; }
     width: 30px;
     height: 30px;
     border-radius: 5px;
+    cursor: hand;
 }
+
+#greenBox {
+    background: #0d0;
+    color: #fff;
+    font-family: 'Helvetica', 'Arial', sans-serif;
+    font-size: 5em;
+    font-weight: bold;
+    text-align: center;
+    width: 30px;
+    height: 30px;
+    border-radius: 5px;
+    cursor: hand;
+}
+
